# OrderSat

./: .gitattributes  .gitignore  .prettierignore  ANNOTATED.txt  CONSIDER.md  NEW_SOURCES.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.codex/PRACTICES/: CHECKPOINTING.md  MODEL_LEARNING.md  MODEL_SIZE.md  TRAINING_EPOCHS.md  VALIDATION_SPLITS.md
GUIDELINES/: DEV.md  MODEL_ARCHITECTURE.md  MODEL_LEARNING.md  MODEL_SIZE.md  SAMPLE_BATCHING.md  SAMPLE_LENGTHS.md  TRAINING_EPOCHS.md
PRACTICES/: CHECKPOINTING.md  DEV.md  MODEL_ARCHITECTURE.md  MODEL_LEARNING.md  MODEL_SIZE.md  ONNX_EXPORT.md  SAMPLE_BATCHING.md  SAMPLE_LENGTHS.md  TOKENIZATION.md  TRAINING_EPOCHS.md
cli/: index.js
cli/01_process_data_sources/: README.md  index.js
cli/02_process_training_samples/: README.md  index.js
cli/03_train_tokenizer_vocab/: __main__.py  main.py
cli/03_train_tokenizer_vocabs/: README.md  __main__.py
cli/04_generate_tokenized_datasets/: README.md  index.js
cli/05_train_pytorch_model/: README.md  __main__.py
cli/05_train_pytorch_models/: README.md  __main__.py
cli/06_export_to_onnx/: README.md  __main__.py
cli/07_optimize_for_webgpu/: README.md  __main__.py
cli/08_optimize_for_wasm/: README.md  __main__.py
cli/09_generate_typescript_project/: README.md  index.js
cli/arrayFromCommas/: index.js
cli/getArgs/: index.js
cli/listUnannotated/: index.js
cli/runWithWorker/: index.js
cli/validateStructure/: batch.js  index.js
embedder/: index.js
models/: README.md
synt/: README.md  index.js
test/: index.js
(+27422 files in other folders)
