[project]
name = "OrderSaT"
version = "0.0.0"
description = "Turn noisy receipts and order data in to schema-alinged json-ld schema.org/Order"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "onnx",
    "onnx-ir",
    "onnxruntime",
    "onnxscript",
    "sentencepiece",
    "torch",
    "torchvision",
]

[tool.uv]
package = false
